--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     <section class="prep-time">
       <h2>Preparation time</h2>
       <ul>
-        <li>Total: Approximately 10 minutes</li>
-        <li>Preparation: 5 minutes</li>
-        <li>Cooking: 5 minutes</li>
+        <li><strong>Total</strong>: Approximately 10 minutes</li>
+        <li><strong>Preparation</strong>: 5 minutes</li>
+        <li><strong>Cooking</strong>: 5 minutes</li>
       </ul>
     </section>
-    <section class="ingrediets">
+    <section class="ingredients">
       <h2>Ingredients</h2>
       <ul>
         <li>2-3 large eggs</li>
@@ -72,15 +72,15 @@
       <p>The table below shows nutritional values per serving without the additional fillings.
       </p>
       <table>
-        <tr>
+        <tr class="nutrition-underlines">
           <th>Calories</th>
           <td>277kcal</td>
         </tr>
-        <tr>
+        <tr class="nutrition-underlines">
           <th>Carbs</th>
           <td>0g</td>
         </tr>
-        <tr>
+        <tr class="nutrition-underlines">
           <th>Protein</th>
           <td>20g</td>
         </tr>
@@ -93,7 +93,7 @@
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Stephen Salano</a>.
   </div>
 </body>
 </html>
